--- a/index.html
+++ b/index.html
@@ -8,7 +8,8 @@
     
     <div id="myDIV" class="header">
         <h2 style="margin:5px">My Note123</h2>
-        <textarea type="text" id="myInput" placeholder="notes..." onchange="render()"></textarea>
+        <textarea type="text" id="myInput" placeholder="notes..."></textarea>
+        <span onclick="render()" class="addBtn">Render</span>
     </div>
 
     <div id='svgDiv'>
