--- a/index.html
+++ b/index.html
@@ -1,9 +1,10 @@
 <!DOCTYPE html>
-<html>
-    <head>
-        <title>Desperedo</title>
-    </head>
-
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <title>Document</title>
+</head>
+<body>
     <link rel='stylesheet' type="text/css" href="todolist.css">
     
     <div id="myDIV" class="header">
@@ -14,5 +15,6 @@
 
     <div id='svgDiv'>
     </div>
-    <script src="svggo.js"></script>
+    <script src="note123_renderer.js"></script>
+</body>
 </html>
